// -----------------------------------------------------------------------
// ENUMS
// -----------------------------------------------------------------------

Enum alert_category {
  Geo
  Met
  Safety
  Security
  Rescue
  Fire
  Health
  Env
  Transport
  Infra
  CBRNE
  Other
}

Enum alert_urgency {
  Immediate
  Expected
  Future
  Past
  Unknown
}

Enum alert_severity {
  Extreme
  Severe
  Moderate
  Minor
  Unknown
}

// -----------------------------------------------------------------------
// TABLES
// -----------------------------------------------------------------------

Table documents {
  id uuid [pk, default: `gen_random_uuid()`]
  source text [not null]
  posted_date date
  title text
  url text
  filename text [unique]
  filetype text
  processed_at timestamptz
  structured_text jsonb
  scraped_at timestamptz [default: `CURRENT_TIMESTAMP`]
  raw_text text
  content_hash text [unique, not null]

  Note: 'Base document storage for scraped or uploaded files'
}

Table alerts {
  id uuid [pk, default: `gen_random_uuid()`]
  document_id uuid [unique, not null]
  category alert_category
  event text
  urgency alert_urgency
  severity alert_severity
  description text
  instruction text
  effective_from timestamptz [not null]
  effective_until timestamptz [not null]

  indexes {
    (category, severity, urgency, effective_from) [name: 'idx_alerts_filters']
    effective_from [name: 'alerts_effective_from_idx']
  }
}

Table alert_areas {
  id uuid [pk, default: `gen_random_uuid()`]
  alert_id uuid [not null]
  place_id uuid
  specific_effective_from timestamptz
  specific_effective_until timestamptz
  specific_urgency alert_urgency
  specific_severity alert_severity
  specific_instruction text

  indexes {
    (alert_id, place_id) [name: 'alert_areas_alert_id_place_id_idx']
    alert_id [name: 'alert_areas_alert_id_idx']
  }
}

Table places {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  parent_id uuid
  parent_name text
  hierarchy_level integer
  polygon geometry

  indexes {
    name [type: gin, name: 'idx_places_name_trgm']
    polygon [type: gist, name: 'idx_places_polygon']
    hierarchy_level [name: 'idx_places_hierarchy']
  }
}

Table alert_search_index {
  alert_id uuid [pk, ref: > alerts.id]
  centroid geometry
  bbox geometry
  unioned_polygon geometry
  search_text text
  category alert_category
  severity alert_severity
  urgency alert_urgency
  event text
  description text
  instruction text
  source text
  url text
  posted_date date
  effective_from timestamptz
  effective_until timestamptz
  affected_places text[]
  place_ids uuid[]
  last_updated_at timestamptz [default: `now()`]

  indexes {
    unioned_polygon [type: gist, name: 'idx_asi_unioned_polygon']
    search_text [type: gin, name: 'idx_alert_search_text']
    posted_date [name: 'idx_asi_posted_date']
    category [name: 'idx_asi_category']
    severity [name: 'idx_asi_severity']
    urgency [name: 'idx_asi_urgency']
    (effective_from, effective_until) [name: 'idx_asi_effective_range']
    place_ids [type: gin, name: 'idx_asi_place_ids']
    centroid [type: gist, name: 'idx_alert_search_centroid']
    bbox [type: gist, name: 'idx_alert_search_bbox']
  }
}

Table conversations {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  title text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note: 'Chat history sessions'
}

Table messages {
  id uuid [pk, default: `gen_random_uuid()`]
  conversation_id uuid [not null]
  type text [not null]
  data jsonb
  created_at timestamptz [default: `now()`]

  indexes {
    (conversation_id, created_at) [name: 'idx_messages']
  }

  Note: 'Individual messages within a conversation'
}

Table echarts {
  id uuid [pk, default: `gen_random_uuid()`]
  type varchar(50) [not null]
  title varchar(255) [not null]
  description text
  data text
  option text [not null]
  source_url text

  indexes {
    (lower(type)) [name: 'idx_echarts', type: btree]
  }

  Note: 'Examples for Echarts option objects'
}

// -----------------------------------------------------------------------
// RELATIONSHIPS
// -----------------------------------------------------------------------

Ref: alerts.document_id > documents.id
Ref: alert_areas.alert_id > alerts.id [delete: cascade]
Ref: alert_areas.place_id > places.id
Ref: alert_search_index.alert_id - alerts.id [delete: cascade]
Ref: places.parent_id > places.id [delete: set null]